--- a/animation-activity/index.html
+++ b/animation-activity/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Transform Lab</title>
+    <title>Animation Lab</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="activity.css">
   </head>
